# agx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  cliff.toml  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  format_drift.md
.github/workflows/: ci.yml  python-wheels.yml  wasm-packages.yml
assets/: demo.tape  sample_codex_session.jsonl  sample_gemini_session.json  sample_generic_session.json  sample_langchain_export.json  sample_otel_json_traces.json  sample_session.jsonl  sample_vercel_ai_session.json
benches/: agx_bench.rs
crates/agx-core/: CHANGELOG.md  Cargo.toml  README.md
crates/agx-core/src/: corpus.rs  diff_align.rs  export.rs  format.rs  langchain.rs  lib.rs  notify.rs  otel_json.rs  pii.rs  pricing.rs  semantic.rs  session.rs  slice.rs  timeline.rs  vercel_ai.rs
crates/agx-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/agx-mcp/src/: main.rs
crates/agx-py/: Cargo.toml  README.md  pyproject.toml
crates/agx-py/src/: lib.rs
crates/agx-wasm/: Cargo.toml  README.md
crates/agx-wasm/src/: lib.rs
docs/: ROADMAP.md  adding-a-parser.md  agent-guide.md  eval-integration.md  mcp-integration.md  stability.md
launch/: LAUNCH_PLAYBOOK.md  lobsters.md  mcp_directories.md  show_hn.md  terminal_trove.md  twitter.md
src/: annotations.rs  browser.rs  codex.rs  corpus.rs  corpus_tui.rs  debug_unknowns.rs  diff_tui.rs  export.rs  format.rs  gemini.rs  generic.rs  langchain.rs  lib.rs  loader.rs  main.rs  otel_json.rs  otel_proto.rs  pricing.rs  replay.rs  semantic.rs  session.rs  slice.rs  timeline.rs  tui.rs  vercel_ai.rs
tests/: corpus_test.rs  summary_test.rs
tests/corpus/: README.md
