[package]
name = "agx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Step-through debugger for your agent"
license = "MIT OR Apache-2.0"

[features]
# Binary OTLP (.pb / .otlp) support. Off by default because `prost` + its
# transitive deps add ~500KB to the binary. Users who only consume JSON
# traces don't pay this cost. Enable with:
#   cargo install agx --features otel-proto
#   cargo build --release --features otel-proto
default = []
otel-proto = ["dep:prost"]

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
arboard = "3"
prost = { version = "0.13", optional = true }
# Parallel parsing in `agx corpus <dir>`. Pulls in `rayon-core` + `crossbeam`
# helpers (both pure-Rust, no OS-specific transitive deps). Small enough
# to earn its place given the target use case of scanning thousands of
# session files at once.
rayon = "1"

[dev-dependencies]
tempfile = "3"
