[workspace]
members = ["crates/agx-core", "crates/agx-mcp", "crates/agx-py", "crates/agx-wasm"]
# `default-members` keeps `cargo build` / `cargo test` at the repo
# root touching only the main bin + agx-core + agx-mcp (the plain-
# Rust bin that exposes the MCP server). agx-py needs Python
# headers (pyo3, built via maturin); agx-wasm targets
# wasm32-unknown-unknown (built via wasm-pack). Neither of those
# belongs in the common dev loop — explicit `-p agx-py` /
# `-p agx-wasm` if you want to poke at them.
default-members = [".", "crates/agx-core", "crates/agx-mcp"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brevity1swos/agx"

[package]
name = "agx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Step-through debugger for your agent"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brevity1swos/agx"

[features]
# Feature flags are re-exported from agx-core so users flip the same
# names on either crate. The top-level `agx` bin just pulls them
# through to the library side.
default = []
# Binary OTLP (.pb / .otlp) support. Off by default because `prost`
# adds ~500KB of transitive deps. Enable with:
#   cargo install agx --features otel-proto
#   cargo build --release --features otel-proto
otel-proto = ["agx-core/otel-proto"]
# Semantic search (opt-in). fastembed + ONNX runtime, ~90MB model
# on first use.
embedding-search = ["agx-core/embedding-search"]
# Desktop notifications for --notify-on-* in --live mode.
notifications = ["agx-core/notifications"]

[dependencies]
# Pure parsers + timeline + corpus aggregation live in agx-core.
# The feature flags above pass through so this crate's callers only
# need to flip them on `agx` (the bin), not on `agx-core` directly.
agx-core = { path = "crates/agx-core" }
# TUI layer — ratatui + crossterm + arboard. These are the deps
# that justify keeping agx-core separate: they're irrelevant to
# anyone driving the parsers from Python / WASM / custom tooling.
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
arboard = "3"
# CLI surface.
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Shared serde infra — used directly by main.rs for a handful of
# CLI-layer types.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "agx_bench"
harness = false
