[package]
name = "agx-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server exposing agx's session introspection tools to AI agents (Claude Code, Cline, Gemini CLI)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/brevity1swos/agx"
readme = "README.md"

[[bin]]
name = "agx-mcp"
path = "src/main.rs"

[dependencies]
agx-core = { path = "../agx-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
